--- a/styleme.css
+++ b/styleme.css
@@ -20,7 +20,7 @@ h3{
     color: cornsilk;
 
 }
-#hyper1,#hyper2,#hyper3{
+.hyper1,.hyper2,.hyper3{
 
     text-decoration: none;
     color: red;
@@ -38,20 +38,13 @@ h3::first-letter{
     font-size: xx-large;
 
 }
-#hyper2{
-    text-decoration: none;
-}
 
-#hyper3 {
-   
-    text-decoration: none;
-}
 
-#hyper1:hover,#hyper2:hover,#hyper3:hover {
+.hyper1:hover,.hyper2:hover,.hyper3:hover {
     
     text-decoration: underline;
   }
-  #cssvalidator,#htmlvalidator{
+  .cssvalidator,.htmlvalidator{
     width: 10%;
     height: auto;
   }
