--- a/styleme.css
+++ b/styleme.css
@@ -6,12 +6,13 @@ span{
 }
 
 h3{
-    font-family:Arial, Helvetica, sans-serif ;
+    font-family:Arial;
     font-weight: bold;
     font-style: italic;
     font-size: 20px;
     color: green;
 }
+
 .special{
     background-color:brown;
     text-align: center;
@@ -20,7 +21,17 @@ h3{
     color: cornsilk;
 
 }
-.hyper1,.hyper2,.hyper3{
+.hyper1{
+     text-decoration: none;
+    color: red;
+    
+}
+.hyper2{
+     text-decoration: none;
+    color: red;
+    
+}
+.hyper3{
 
     text-decoration: none;
     color: red;
@@ -40,14 +51,28 @@ h3::first-letter{
 }
 
 
-.hyper1:hover,.hyper2:hover,.hyper3:hover {
+.hyper1:hover{
+     text-decoration: underline;
+    
+}
+.hyper2:hover{
+         text-decoration: underline;
+        
+}
+.hyper3:hover {
     
     text-decoration: underline;
   }
-  .cssvalidator,.htmlvalidator{
+.cssvalidator{
+       width: 10%;
+    height: auto;
+     
+}
+.htmlvalidator{
     width: 10%;
     height: auto;
   }
+
   body{
     background-color: gainsboro;
      
