--- a/styleme.css
+++ b/styleme.css
@@ -77,6 +77,10 @@ h3::first-letter{
     background-color: gainsboro;
      
   }
+ol { 
+    display: flex;
+    flex-direction: column-reverse;
+}
 
 
 
