--- a/formstyle.css
+++ b/formstyle.css
@@ -13,10 +13,20 @@
   display: inline;
     font-size: 20px;
 }
+
 #topp, #lunch, #payment{
 
+ 
+  
     text-decoration: underline;
     font-weight: bolder;
+}
+#firstname:after, #lastname:after, #company:after, #address:after, #email:after, #number:after {
+ 
+  color: #e32;
+  content: ' *';
+  display:inline;
+
 }
 #headselect{
 
@@ -31,35 +41,37 @@
 
 
 #left{
-    position: absolute;
+  
     left: 20px;
     width: 300px;
     padding: 50px;
     top: 20px;
-   
+    position: -webkit-sticky; /* Safari */
+    position: sticky;
+    position: fixed;
     
 
 }
 
 #right {
-    position: absolute;
+  
     right: 380px;
     width: 300px;
     padding: 10px;
     top: 80px;
+    position: -webkit-sticky; /* Safari */
+  position: sticky;
+  position: fixed;
    
   }
-  div > div #meal{
-    
-    top: 10px;
-  }
+ 
   #bottomcenter{
    position: absolute;
   width: 100%;
   display: flex;
   justify-content: center; 
   bottom: 0px; 
-  background-color: darkgrey;
+  background-color: rgb(77, 155, 135);
  
     
 
@@ -102,6 +114,9 @@
     select option {
       font-weight:normal;
     }
+
+
+
 
        
     
